# multi_agent_resume_screening_project

./: .gitignore  API_DOCUMENTATION.md  CLI_REFERENCE.md  INTEGRATION_TESTS_GUIDE.md  README.md  demo_classifier.py  demo_resume_processor.py  demo_section_parser.py  main.py  pyproject.toml  requirements.txt  run_integration_tests.sh  setup_dataset.py  test_integration_resume_processor.py  test_skill_normalizer_integration.py  verify_skill_extractor.py
docs/: API_DOCUMENTATION.md  CLI_REFERENCE.md  INTEGRATION_TESTS_GUIDE.md  README.md  REAL_DATA_RESULTS.md  RESUME_PROCESSOR_ARCHITECTURE.md
docs/report/: main.tex
src/: association_miner.py  classifier.py  clustering_engine.py  evaluation_module.py  feature_generator.py  resume_processor.py
tests/: test_association_miner.py  test_classifier.py  test_classifier_basic.py  test_classifier_integration.py  test_evaluation_module.py  test_main_integration.py  test_resume_processor_integration.py  test_section_parser_basic.py  test_webapp.py
tests/fixtures/: QUICK_REFERENCE.md
webapp/: __init__.py  app.py
webapp/static/: styles.css
webapp/templates/: dashboard.html  reports.html
